Update cloudready-installation-settings-and-operations.md